# AI-Powered-Cloud-Cost-Optimization

./: README.md  cloud_pricing_reference_synthetic.xlsx  cost_analysis.py  cost_analysis_prompt.txt  demo.py  main.py  project_profile.py  project_profile_prompt.txt  project_report.py  pyproject.toml  synthetic_bill.py  synthetic_bill_prompt.txt  utils.py
artifacts/: cost_analysis_recommendations.json  project_profile.json  synthetic_bill.json  user_input.txt
artifacts/E-commerce Price Tracking Platform/: cost_analysis_recommendations.json  project_profile.json  synthetic_bill.json  user_input.txt
artifacts/Fitness Tracker Platform/: cost_analysis_recommendations.json  project_profile.json  project_report.html  synthetic_bill.json  user_input.txt
artifacts/Food Delivery App/: cost_analysis_recommendations.json  project_profile.json  synthetic_bill.json
artifacts/FoodDeliveryApp/: cost_analysis_recommendations.json  project_profile.json  project_report.html  synthetic_bill.json
artifacts/Healthcare Appointment Booking App/: cost_analysis_recommendations.json  project_profile.json  synthetic_bill.json  user_input.txt
artifacts/Online Learning Platform/: cost_analysis_recommendations.json  project_profile.json  synthetic_bill.json  user_input.txt
artifacts/Personal Expense Tracking App/: cost_analysis_recommendations.json  project_profile.json  user_input.txt  (+1 more)
prompts/: synthetic_bill_prompt.txt
reports/: project_profile.json
services/: cost_analysis.py  project_profile.py  project_report.py  synthetic_bill.py  utils.py
templates/: project_report.html
(+16 files in other folders)
