[project]
name = "ai-powered-cloud-cost-optimizer"
version = "0.1.0"
description = "An LLM-based tool that analyzes cloud infrastructure costs and generates actionable optimization recommendations based on a user’s project requirements, expected user load, and monthly budget. It helps teams understand cost drivers, identify inefficiencies, and make budget-aware architectural decisions early in the design phase."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-community>=0.4.1",
    "langchain[huggingface]>=1.2.0",
    "msoffcrypto-tool>=5.4.2",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "unstructured>=0.18.21",
]
